# gameoflife

./: ChangeLog  Makefile  Makefile.in  README  config.h  config.h.in  configure  configure.in
src/: Makefile.am  Makefile.in  config.h.in  gameoflife.c
